// Original file: ../proto/notion.proto

import type { PageID as _notionClonePackage_PageID, PageID__Output as _notionClonePackage_PageID__Output } from '../notionClonePackage/PageID';
import type { Page as _notionClonePackage_Page, Page__Output as _notionClonePackage_Page__Output } from '../notionClonePackage/Page';

export interface PageWithID {
  'pageId'?: (_notionClonePackage_PageID | null);
  'page'?: (_notionClonePackage_Page | null);
}

export interface PageWithID__Output {
  'pageId'?: (_notionClonePackage_PageID__Output);
  'page'?: (_notionClonePackage_Page__Output);
}
